--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "19.1.0",
     "react-dropzone": "^14.3.8",
     "recharts": "^3.2.1",
+    "svix": "^1.76.1",
     "tailwind-merge": "^3.3.1",
     "xlsx": "^0.18.5"
   },
